fix(StudyBrowser): Style fixes for Study Browser

--- a/src/studyBrowser/ImageThumbnail.styl
+++ b/src/studyBrowser/ImageThumbnail.styl
@@ -36,6 +36,8 @@
 .image-thumbnail-canvas
   height: 100%
   overflow: hidden
+  display: flex
+  justify-content: center
 
   img
     -webkit-user-drag: none
