--- a/src/studyBrowser/ThumbnailEntry.styl
+++ b/src/studyBrowser/ThumbnailEntry.styl
@@ -9,6 +9,11 @@
   cursor: pointer
   display: table
   margin: 0 auto
+  margin-top: 1rem
+  margin-bottom: 1.5rem
+
+  .p-x-1
+    padding: 0 1rem
 
   &.draggable
     cursor: copy
@@ -16,14 +21,21 @@
     cursor: -moz-grab
 
   .series-details
+    display: flex;
+    flex-direction: row;
     color: var(--text-primary-color);
     font-size: 14px
     line-height: 1.3em
     margin-top: 5px
+    margin-left: 1rem
+    margin-right: 1rem
     max-width: 217px
     min-height: 36px
     position: relative
     word-wrap: break-word
+
+    .series-description
+        flex-grow: 1
 
     &.info-only
       .series-description
