fix(StudyBrowser): Make drag/drop more React-like. Could probably be separated into some other component

--- a/src/studyBrowser/ThumbnailEntry.styl
+++ b/src/studyBrowser/ThumbnailEntry.styl
@@ -107,3 +107,11 @@
           display: inline-block
           height: 11px
           width: 11px
+
+.image-thumbnail-clone
+  z-index: 100000
+  pointer-events: none
+
+  &:hover
+    border-color: var(--hover-color);
+    box-shadow: none
