fix(linting): Add lint command to clean up code

--- a/src/viewer/ToolbarButton.css
+++ b/src/viewer/ToolbarButton.css
@@ -1,6 +1,6 @@
 :root {
-  --default-color: #9CCEF9;
-  --active-color: #20A5D6;
+  --default-color: #9ccef9;
+  --active-color: #20a5d6;
   --hover-color: #ffffff;
 }
 
