--- a/src/studyList/StudyList.styl
+++ b/src/studyList/StudyList.styl
@@ -100,6 +100,9 @@ $bodyCellHeight = 40px
     font-size: 30px
     font-weight: 200
     text-align: center
+  
+  .loading
+    text-align: center
 
   table#tblStudyList
     tr
