--- a/src/basic/paginationArea/PaginationArea.styl
+++ b/src/basic/paginationArea/PaginationArea.styl
@@ -19,6 +19,7 @@
         font-weight: normal
 
     select
+        margin: 5px
         background-color: var(--primary-background-color)
         color: white
 
@@ -27,6 +28,7 @@
     margin: 0 4px
 
     select
+      margin: 0px 4px 0px 4px
       width: 42px
 
   .page-buttons
