--- a/src/studyList/StudyList.styl
+++ b/src/studyList/StudyList.styl
@@ -34,6 +34,9 @@ $activeColor = #20A5D6
 $studyListToolbarHeight = 75px
 $bodyCellHeight = 40px
 
+.studylistStudy
+  cursor: pointer
+
 .studyListToolbar
   background: var(--ui-gray-darkest);
   height: $studyListToolbarHeight
