Styling user preferences

--- a/src/userPreferences/UserPreferences.styl
+++ b/src/userPreferences/UserPreferences.styl
@@ -22,152 +22,6 @@
   --state-error-text: #661111;
 }
 
-// TODO: from a merged-styles.css
-.p-r-1
-  padding-right: 1rem !important;
-
-label
-  margin-bottom: 5px
+@import '../design/styles/common/form.styl'
+@import '../design/styles/common/navbar.styl'
   
-
-.error { border: 1px solid red; }
-
-// TODO: put this in a common .styl file or create a form component
-
-label.wrapperLabel
-  cursor: pointer
-
-label.wrapperLabel:not(.checkboxLabel)
-  cursor: pointer
-  display: flex
-  flex-direction: column
-
-  .wrapperText
-    display: block
-    order: -1
-    transition(color 0.3s ease)
-
-.themed
-  table
-    color: var(--text-primary-color)
-
-    th, td
-      font-size: 15px
-      font-weight: normal
-
-    th
-      line-height: 60px
-
-    td
-      line-height: 18px
-
-.form-themed
-  .btn, input[type=text], input[type=password], input[type=number]
-
-    &[disabled], &.disabled
-
-      &, &:hover, &:active
-        background-color: var(--ui-gray-darker)
-        border-color: var(--ui-gray-light)
-        color: var(--text-primary-color)
-
-        & + .wrapperText
-          color: var(--text-primary-color)
-          cursor: auto
-
-  input[type=text], input[type=password], input[type=number]
-    background-color: var(--ui-gray)
-    border-color: var(--ui-border-color)
-    color: var(--text-primary-color)
-    font-weight: normal
-    transition(background-color 0.3s ease\, border-color 0.3s ease)
-
-    &:active, &:focus
-      background-color: var(--ui-gray-dark)
-      border: 2px solid var(--active-color)
-      box-shadow: none
-
-      & + .wrapperText
-        color: var(--active-color)
-
-  .btn-primary
-    background-color: var(--active-color)
-    border-collapse: var(--ui-border-color-active)
-    color: var(--ui-text-color-active)
-    transition(background-color 0.3s ease\, border-color 0.3s ease)
-
-    &:hover, &:active, &:focus, &:focus:active
-      // TODO: 0.8  opacity
-      background-color: var(--ui-active-color)
-      border-collapse: var(--ui-border-color-active)
-      color: var(--ui-text-color-active)
-
-  span.select2.select2-container
-    width: 100% !important
-
-    span.select2-selection
-      color: rgba(255, 255, 255, 0.52)
-      background-color: #2c353f
-
-      span.select2-selection__arrow
-        background-color: var(--ui-gray)
-
-      &:hover, &:focus
-        span.select2-selection__arrow
-          background-color: var(--ui-gray)
-          color: var(--ui-text-primary-color)
-
-      span.select2-selection__rendered
-        color: var(--ui-text-primary-color)
-        font-size: 14px
-
-    &.select2-container--open span.select2-selection span.select2-selection__arrow
-      background-color: var(--ui-text-primary-color)
-      color: var(--text-primary-color)
-
-  .form-control
-    background-color: #FFFFFF
-    border: 0
-    border-radius(2px)
-    font-size: 14px
-    height: 30px
-    line-height: 16px
-    padding: 8px 9px 6px
-
-    //&:focus
-      // TODO
-      //theme('box-shadow', '0 0 0 2px $activeColor !important')
-
-  // TODO
-  //.form-themed .form-control
-    // theme('box-shadow', '0 0 0 1px $uiBorderColor')
-
-
-
-.state-error
-
-    &.wrapperLabel input + .wrapperText
-      color: var(--state-error-text)
-
-    &+.tooltip
-
-        .tooltip-inner
-            color: white
-            background-color: var(--state-error-border)
-
-        &.top .tooltip-arrow
-          border-top-color: var(--state-error-border)
-
-        &.right .tooltip-arrow
-          border-right-color: var(--state-error-border)
-
-        &.bottom .tooltip-arrow
-          border-bottom-color: var(--state-error-border)
-
-        &.left .tooltip-arrow
-          border-left-color: var(--state-error-border)
-
-    &:not(.component-group)
-        &.form-control, .form-control
-          background-color: var(--state-error)
-          border-color: var(--state-error-border)
