Error messages on hotkeys preferences

--- a/src/userPreferences/UserPreferences.styl
+++ b/src/userPreferences/UserPreferences.styl
@@ -18,10 +18,10 @@
   --study-list-padding: 8%;
   --large-numbers-color:#6FBDE2;
   --state-error: #FFCCCC;
-  --state-error-border: #993333;
-  --state-error-text: #661111;
+  --state-error-border: #FFCCCC;
+  --state-error-text: #FFCCCC;
 }
 
 @import '../design/styles/common/form.styl'
 @import '../design/styles/common/navbar.styl'
-  
+@import '../design/styles/common/state.styl'
