Styling user preferences modal

--- a/src/design/styles/common/modal.styl
+++ b/src/design/styles/common/modal.styl
@@ -51,9 +51,9 @@
 
     .modal-body
       color: var(--text-primary-color)
-      padding: 16px 22px 25px
+      padding: 16px 22px 0px
       position: relative
-
+      
     .modal-header
       border-bottom-width: 3px
       border-bottom-style: solid
@@ -70,6 +70,7 @@
 
     .modal-footer
       border-top: 0
+      padding-top: 0
 
   .card-round
     background-color: var(--ui-gray-dark)
