--- a/src/userPreferences/UserPreferences.styl
+++ b/src/userPreferences/UserPreferences.styl
@@ -25,3 +25,18 @@
 @import '../design/styles/common/form.styl'
 @import '../design/styles/common/navbar.styl'
 @import '../design/styles/common/state.styl'
+
+.modal-body
+  overflow: hidden
+
+.form-content
+  border-bottom: 3px solid #000000
+  margin-bottom: 20px
+  margin-left: -22px
+  margin-right: -22px
+  max-height: 70vh
+  overflow-y: auto
+  padding: 22px
+
+.popover
+  width: 300px
