--- a/src/design/styles/common/modal.styl
+++ b/src/design/styles/common/modal.styl
@@ -13,6 +13,7 @@
 }
 
 .modal-dialog
+
   .modal-content
     background-color: var(--ui-gray-darker)
     border-color: var(--ui-border-color)
@@ -53,6 +54,16 @@
       color: var(--text-primary-color)
       padding: 16px 22px 0px
       position: relative
+
+      ::-webkit-scrollbar {
+        width: 6px;
+        background-color: var(--ui-gray-dark);
+      } 
+
+      ::-webkit-scrollbar-thumb {
+        background-color: var(--ui-gray-light);
+        border-radius: 5px;
+      }
       
     .modal-header
       border-bottom-width: 3px
