Adding globals.styl

--- a/src/userPreferences/UserPreferences.styl
+++ b/src/userPreferences/UserPreferences.styl
@@ -25,6 +25,7 @@
 @import '../design/styles/common/form.styl'
 @import '../design/styles/common/navbar.styl'
 @import '../design/styles/common/state.styl'
+@import '../design/styles/common/global.styl'
 
 .modal-body
   overflow: hidden
