--- a/src/userPreferences/UserPreferences.styl
+++ b/src/userPreferences/UserPreferences.styl
@@ -30,6 +30,11 @@
 .modal-body
   overflow: hidden
 
+.errorMessage
+  color: var(--state-error-text)
+  font-size: 10px
+  text-transform: uppercase;
+
 .form-content
   border-bottom: 3px solid #000000
   margin-bottom: 20px
