--- a/src/basic/paginationArea/PaginationArea.styl
+++ b/src/basic/paginationArea/PaginationArea.styl
@@ -7,11 +7,12 @@
   --ui-gray-dark: #16202B;
   --ui-gray-darkest: #14202A;
   --ui-gray-darker: #151A1F;
-  --ui-gray-light:  #516873;
+  --ui-gray-light: #516873;
   --primary-background-color: #000000;
 }
 
 .pagination-area
+    color: var(--text-secondary-color);
     font-size: 13px
     font-weight: normal !important
 
