fix(dnd): Improvements for drag/drop, bump to 0.1.9

--- a/src/studyBrowser/ImageThumbnail.styl
+++ b/src/studyBrowser/ImageThumbnail.styl
@@ -18,7 +18,7 @@
   border-radius: 12px
   height: 135px
   margin: 0 auto
-  padding 1px 7px
+  padding 5px
   position: relative
   transition: var(--sidebar-transition);
   width: 217px
