--- a/example/src/theme-tide.css
+++ b/example/src/theme-tide.css
@@ -17,6 +17,17 @@
   --primary-background-color: #000000;
   --box-background-color: #3E5975;
 
+  --text-primary-color: #ffffff;
+  --text-secondary-color: #91B9CD;
+  --input-background-color: #2c363f;
+  --input-placeholder-color: #d3d3d3;
+
+  --large-numbers-color:#6FBDE2;
+
+  --state-error: #FFCCCC;
+  --state-error-border: #FFCCCC;
+  --state-error-text: #FFCCCC;
+
   /* Common palette */
   --ui-yellow: #E29E4A;
   --ui-sky-blue: #6FBDE2;
