--- a/src/viewer/CineDialog.styl
+++ b/src/viewer/CineDialog.styl
@@ -1,15 +1,7 @@
-:root {
-  --text-secondary-color: #91B9CD;
-  --default-color: #9ccef9;
-  --active-color: #20a5d6;
-  --hover-color: #ffffff;
-  --ui-gray-darkest: #14202A;
-}
-
 .CineDialog
   background: var(--ui-gray-darkest);
   color: var(--text-secondary-color);
-  filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.85))
+  filter: drop-shadow(0 0 3px var(--ui-gray-darkest))
   border: none
   border-radius: 8px
   width: inherit;
@@ -21,22 +13,6 @@
 
   h5, label
     font-weight: 400
-
-  .btn
-    color: var(--text-secondary-color);
-    background-color: transparent
-
-    &:hover
-      color: var(--hover-color);
-
-    &:active, &.active
-      color: var(--active-color);
-
-    &[disabled]
-      &:hover
-        color: inherit
-      &:active
-        color: var(--text-secondary-color);
 
   .cine-navigation, .cine-controls, .cine-options
     cursor: default
@@ -152,6 +128,8 @@
         line-height: 1.42857143;
 
   .btn
+    color: var(--text-secondary-color);
+    background-color: transparent
     border: 0
     border-radius: 4px
     font-size: 15px
@@ -160,34 +138,32 @@
     line-height: 37px
     padding: 0 12px
 
-    &.btn-primary, &.btn-secondary
-      color: #000000
-
-      &:hover, &:active, &:focus, &:focus:active
-        color: #000000
+    &:hover, &:active, &.active
+      color: var(--hover-color);
+    
+    &[disabled]
+      &:hover
+        color: inherit
+      &:active
+        color: var(--text-secondary-color);
 
     &.btn-primary, &.btn-secondary, &.btn-danger
       transition: background-color 0.3s ease
 
+      &:hover, &:active, &:focus
+        opacity: 0.8
+
     &.btn-primary
       background-color: var(--active-color);
-
-      &:hover, &:active, &:focus, &:focus:active
-        opacity: 0.8;
+      color: var(--primary-background-color)
 
     &.btn-secondary
       background-color: var(--text-secondary-color);
-
-      &:hover, &:active, &:focus, &:focus:active
-        opacity: 0.8
+      color: var(--primary-background-color)
 
     &.btn-danger
       background-color: var(--text-destructive-color);
       color: var(--text-primary-color);
 
-      &:hover, &:active, &:focus, &:focus:active
-        //theme('color', '$textPrimaryColor')
-        //theme('background-color', '$destructiveColor', 0.8)
-
     &.active
-      box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.5)
+      box-shadow: inset 1px 1px 2px var(--ui-gray-darkest)
