--- a/src/userPreferences/UserPreferences.styl
+++ b/src/userPreferences/UserPreferences.styl
@@ -1,27 +1,3 @@
-:root {
-  --text-secondary-color: #91B9CD;
-  --default-color: #9ccef9;
-  --active-color: #20a5d6;
-  --hover-color: #ffffff;
-  --ui-gray: #263340;
-  --ui-gray-dark: #16202B;
-  --ui-gray-darkest: #14202A;
-  --ui-gray-darker: #151A1F;
-  --ui-gray-light:  #516873;
-  --primary-background-color: #000000;
-  --text-primary-color: #ffffff;
-  --text-secondary-color: #91b9cd;
-  --input-background-color: #2c363f;
-  --input-placeholder-color: lightgray;
-  --study-list-toolbar-height: 75px;
-  --body-cell-height : 40px;
-  --study-list-padding: 8%;
-  --large-numbers-color:#6FBDE2;
-  --state-error: #FFCCCC;
-  --state-error-border: #FFCCCC;
-  --state-error-text: #FFCCCC;
-}
-
 @import '../design/styles/common/form.styl'
 @import '../design/styles/common/navbar.styl'
 @import '../design/styles/common/state.styl'
@@ -36,7 +12,7 @@
   text-transform: uppercase;
 
 .form-content
-  border-bottom: 3px solid #000000
+  border-bottom: 3px solid var(--primary-background-color)
   margin-bottom: 20px
   margin-left: -22px
   margin-right: -22px
