--- a/example/src/theme-tide.css
+++ b/example/src/theme-tide.css
@@ -22,6 +22,10 @@
   --input-background-color: #2c363f;
   --input-placeholder-color: #d3d3d3;
 
+  --table-hover-color: #2c363f;
+  --table-text-primary-color: #ffffff;
+  --table-text-secondary-color: #91b9cd;
+
   --large-numbers-color:#6FBDE2;
 
   --state-error: #FFCCCC;
