--- a/src/design/styles/common/navbar.styl
+++ b/src/design/styles/common/navbar.styl
@@ -18,13 +18,14 @@
     line-height: 40px
     margin-bottom: 0
 
-    &>a
+    &>button
       display: block
       width: 100%
       line-height: inherit
       margin: 0
       height: inherit
       padding: 0 10px 0 10px
+      outline: none
 
       &:after
         background-color: transparent
@@ -35,13 +36,13 @@
         transition(background-color 0.3s ease)
         width: 100%
 
-    &>a, &.active>a
+    &>button, &.active>button
       &, &:hover, &:active, &:focus
         color: var(--active-color)
         background-color: transparent
         border: 0
 
-    &.active>a
+    &.active>button
       font-weight: bold
 
       &:after
