feat(measurementTable): Adding scrollable component into measurement table with small style fixes

--- a/src/MeasurementTable/MeasurementTable.styl
+++ b/src/MeasurementTable/MeasurementTable.styl
@@ -1,5 +1,9 @@
 .measurementTable
   background-color: var(--primary-background-color)
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 
   .maxMeasurements
     border-radius: 3px;
@@ -16,6 +20,8 @@
     background-color: var(--default-color);
 
   .measurementTableHeader
+    padding-left: 45px;
+
     .measurementTableHeaderItem  
       display: inline-block;
       margin-top: 9px;
