--- a/src/TableList/TableList.styl
+++ b/src/TableList/TableList.styl
@@ -3,6 +3,8 @@ $headerRowHeight = 63px
 
 .tableList
   background-color: var(--primary-background-color)
+  height: 100%;
+  width: 100%;
 
   .tableListHeader
     background-color: var(--ui-gray-darker)
