feat(plugins): Work on adding plugin support to LayoutManager. Add Dropdown component (0.2.1)

--- a/src/LayoutChooser/LayoutManager.css
+++ b/src/LayoutChooser/LayoutManager.css
@@ -7,3 +7,11 @@
 .viewport-container.active {
   border: var(--viewport-border-thickness) solid var(--active-color);
 }
+
+.EmptyViewport {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: var(--text-secondary-color);
+}
