--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -2,9 +2,9 @@
   position: fixed
   top: calc(100% - 100vh)
 
-  &:before
-    box-shadow(0 0 0 5000px rgba(0, 0, 0, 0.8))
-    transition(opacity 0.3s ease)
+  &:before 
+    box-shadow: 0 0 0 5000px rgba(0, 0, 0, 0.8)
+    transition: opacity 0.3s ease
     opacity: 0
 
   &:hover
@@ -15,7 +15,7 @@
 
   &:not(.left):not(.right)
     left: 50%
-    transform(translateX(-50%))
+    transform: translateX(-50%)
 
   &.left
     border-right: 1px solid var(--ui-border-color)
@@ -33,15 +33,15 @@
     .study-browser
       left: auto
       right: 0
-      transform-origin(calc(100% - 1em) calc(1em + 17px))
+      transform-origin: calc(100% - 1em) calc(1em + 17px)
 
     .series-browser
       left: 0
       right: auto
-      transform-origin(1em calc(1em + 15px))
+      transform-origin: 1em calc(1em + 15px)
 
       .thumbnails-wrapper
-        transform-origin(0% 0%)
+        transform-origin: 0% 0%
 
       .thumbnailEntry
         float: left
@@ -57,7 +57,7 @@
     opacity: 1
     padding-bottom: 3px
     text-align: center
-    transition(opacity 0.3s ease)
+    transition: opacity 0.3s ease
 
   .series-switch,
   .study-switch
@@ -77,14 +77,14 @@
     left: 0
     margin-top: 100px
     max-height: calc(100vh - 100px)
-    transform-origin(1em calc(1em + 17px))
+    transform-origin: 1em calc(1em + 17px)
     width: 300px
 
     .study-browser-list
       padding: 0 10px
 
   .series-browser
-    max-height: 100%
+    max-height: 100vh
     max-width: 720px
     right: 0
     transform-origin(calc(100% - 1em) calc(1em + 15px))
@@ -111,8 +111,8 @@
     opacity: 0
     position: absolute
     top: 0
-    transform(scale(0))
-    transition(all 0.3s ease)
+    transform: scale(0)
+    transition: transform 0.3s ease , opacity 0.3s ease
     z-index: 3
 
   .series-box,
@@ -127,11 +127,11 @@
 
   .series-item
     background-color: var(--box-background-color)
-    border-radius(3px)
+    border-radius: 3px
     float: right
     height: 15px
     margin: 2px
-    transition(opacity 0.3s ease)
+    transition: opacity 0.3s ease
     width: 15px
 
     &.count
@@ -149,7 +149,7 @@
   .series-switch:hover .series-browser,
   .study-switch:hover .study-browser
     opacity: 1
-    transform(scale(1))
+    transform: scale(1)
 
   &.series-triggered .series-item,
   .series-switch:hover .title-label
@@ -157,7 +157,7 @@
 
   &.series-triggered
     .thumbnails-wrapper
-      transform(scale(0.9) translateY(80px))
+      transform: scale(0.9) translateY(80px)
 
     .series-browser:not(:hover)
       &>.scrollable
@@ -168,12 +168,12 @@
 
   .series-switch:hover .series-browser
     .thumbnails-wrapper
-      transform(scale(1) translateY(0))
+      transform: scale(1) translateY(0)
 
     .thumbnailEntry .seriesDetails
       opacity: 1
-      transform(translateY(0))
-      transition-delay(0.3s)
+      transform: translateY(0)
+      transition-delay: 0.3s
 
   .study-browser-item.active .study-item-box
     box-shadow: inset 0 0 0 3px var(--active-color)
@@ -187,7 +187,7 @@
       height: 36px
 
     .study-box
-      border-radius(7px)
+      border-radius: 7px
 
     .series-item
       height: 10px
