fix(quickSwitch): Series animation fix on hover in and hover out

--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -90,8 +90,8 @@
     transform-origin: calc(100% - 1em) calc(1em + 15px)
 
     .thumbnails-wrapper
-      transition(transform 0.3s ease)
-      transform-origin(100% 0%)
+      transition: transform 0.3s ease
+      transform-origin: 100% 0%
 
     .ThumbnailEntry
       float: right
