feat(quickSwitch): Fixing last issues and adding required animations

--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -163,7 +163,7 @@
       &>.scrollable
         padding-bottom: 80px
 
-      &>.scroll-nav
+      &>.scrollNav
         opacity: 0
 
   .series-switch:hover .series-browser
