Fixes for layout button display (0.2.4)

--- a/example/src/LayoutExample.css
+++ b/example/src/LayoutExample.css
@@ -1,3 +1,7 @@
+.LayoutExample {
+  background-color: var(--primary-background-color);
+}
+
 .GridLayout td {
   padding: 5px;
   border: 1px solid black;
