fix(scrollableArea): Small fix on scroll

--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -104,6 +104,10 @@
     .scrollable
       padding-top: 15px
       transition: padding-bottom 0.3s ease
+    
+    .study-browser-series {
+      overflow hidden
+    }
 
   .series-browser,
   .study-browser
