--- a/src/MeasurementTableItem/MeasurementTableItem.styl
+++ b/src/MeasurementTableItem/MeasurementTableItem.styl
@@ -38,3 +38,18 @@
     width: 90px;
     border-left: 1px solid var(--text-secondary-color);
     color: var(--text-primary-color);
+  
+  &.hasWarnings
+    .itemIndex
+      opacity: 1
+      background-color: #e29e4a;
+      color: #fff;
+    .warning-icon
+      display: block;
+      margin: 7px auto 0;
+
+      svg
+        fill: #fff;
+        width: 22px;
+        height: 20px;
+        pointer-events: inherit;
