fix(quickSwitch): Remove the ON/OFF swtich and adding the component directly into the view

--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -1,6 +1,6 @@
 .series-quick-switch
-  position: fixed
-  top: calc(100% - 100vh)
+  width: 72px;
+  position: relative;
 
   &:before 
     box-shadow: 0 0 0 5000px rgba(0, 0, 0, 0.8)
@@ -8,7 +8,7 @@
     opacity: 0
 
   &:hover
-    z-index: 2
+    z-index: 50
 
     &:before
       opacity: 1
