--- a/src/ExtendedToolbarMenu/ExtendedToolbarMenu.styl
+++ b/src/ExtendedToolbarMenu/ExtendedToolbarMenu.styl
@@ -1,3 +1,12 @@
-.ToolbarSection
+.toolbarOverlay
   border 2px solid var(--ui-border-color-dark)
   padding 5px
+
+.tooltip-toolbar-overlay
+  margin-top 40px
+
+  .tooltip-arrow
+    display none
+  .tooltip-inner
+    max-width: unset;
+    background: none;
