--- a/src/viewer/ToolbarButton.styl
+++ b/src/viewer/ToolbarButton.styl
@@ -14,6 +14,19 @@
   user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 
+  .svgContainer
+    margin: 0 auto;
+    text-align: center;
+
+  .buttonLabel
+    font-size: 12px;
+    font-weight: 500;
+
+    .expanded-status
+      text-align: center;
+      width: 15px;
+      line-height: unset;
+      font-size: 12px;
 
   svg
     height: 21px;
@@ -49,4 +62,3 @@
   span.toolbar-button-label
     font-size: 12px;
     font-weight: 500;
-    display: block;
