studylist border z-index

--- a/src/studyList/StudyList.styl
+++ b/src/studyList/StudyList.styl
@@ -71,10 +71,10 @@ placeholder-color(c)
     z-index: 1
 
   &:after
-    background-color: var(--large-numbers-color)
+    background-color: var(--ui-border-color-active)
     bottom: -1px
     height: 1px
-    z-index: 3
+    z-index: 2
 
 #studyListContainer
   width: 100%
